--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -7,7 +7,11 @@
 }
 .pimpmy_menu{
     padding-left: 2rem;
-    font-size: 1.5rem;
+    font-size: 1rem;
+}
+
+.navbar-nav li{
+    padding-right: 1rem;
 }
 
 @media (max-width: 500px) {
