ajout de youtube api et page about

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 // Base
 @import 'base/base.scss';
 // Components
+@import 'components/about.scss';
 @import 'components/game.scss';
 @import 'components/games.scss';
 @import 'components/gameDetail.scss';
