logo et functional components

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,7 @@
 @import 'components/game.scss';
 @import 'components/games.scss';
 @import 'components/gameDetail.scss';
+@import 'components/logo.scss';
 @import 'components/navigation.scss';
 @import 'components/retourbtn.scss';
 @import 'components/videos.scss';
