--- a/src/styles/components/_videos.scss
+++ b/src/styles/components/_videos.scss
@@ -1,3 +1,13 @@
 .videoContainer{
     padding: 1rem;
 }
+
+.logo_container{
+    display: flex;
+    align-items: center;
+}
+.logo{
+    margin: auto;
+    width: 5rem;
+    height: 5rem;
+}
