--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,3 +9,4 @@
 @import 'components/navigation.scss';
 @import 'components/retourbtn.scss';
 @import 'components/videos.scss';
+@import 'components/performance.scss';
