Comments et TeamProfile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -11,3 +11,11 @@ body {
 .customeFontAwesome{
     padding-right: 1px;
 }
+.pimpmy_fa{
+    color: white;
+    padding-right: 0.5rem;
+}
+.pimpmy_cardHeader{
+    background-color: #17a2b8 !important;
+    color: white;
+}
