--- a/src/styles/components/_game.scss
+++ b/src/styles/components/_game.scss
@@ -34,6 +34,10 @@ table tbody tr td{
     margin-bottom: 1rem;
 }
 
+.pimpmy_gamebtn{
+    width: 3.5rem;
+}
+
 @media(max-width:420px){
     table tbody tr td{
         padding: 0.5rem; //Marge à l'intérieur des cellules, équivalent de cellpadding
