--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,3 +10,5 @@
 @import 'components/retourbtn.scss';
 @import 'components/videos.scss';
 @import 'components/performance.scss';
+@import 'components/teamAwards.scss';
+@import 'components/teamAwardsChampionship.scss';
