--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,3 +12,4 @@
 @import 'components/performance.scss';
 @import 'components/teamAwards.scss';
 @import 'components/teamAwardsChampionship.scss';
+@import 'components/leadersForm.scss';
